Fixed up menu page, other small fixes. Menu page scroll bar is under header, stuck on that.

--- a/css/_global.scss
+++ b/css/_global.scss
@@ -4,8 +4,11 @@ $bgthru: #CCB6E7ee;
 $phonebuttonclr: #b78aee8c;
 $hoverclr: #F9A252;
 $secondary: #B14E4E;
-$secondarythru: #be95c4ee;
+$secondarythru: #be95c4ff;
 $headingfont: 'Exo 2';
+
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@1,500&family=Oswald:wght@200;500;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -19,3 +22,10 @@ img, iframe {
     max-width: 100%;
 }
 
+.image_border {
+    position: absolute;
+    width: 94%;
+    height: calc(100% - 3px);
+    border: 1px solid black;
+    z-index: 1;
+    }
