--- a/css/style.scss
+++ b/css/style.scss
@@ -30,20 +30,10 @@
         &:hover {
             filter: grayscale(0%);
             transform: translateX(-5px) translateY(-5px);
-        }
-    ~.image_border {
-        position: absolute;
-        width: 94%;
-        height: calc(100% - 3px);
-        border: 1px solid black;
-        z-index: 1;
-        }
-
-       
+             }    
     }
     
 }
-
 .order_now {
 
         padding-top: 5px;
@@ -69,32 +59,64 @@
 
 #awards {
     display: grid;
+    position: relative;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    column-gap: 10px;
     place-items: center;
     text-align: center;
     color: $secondary;
     min-height: 50vh;
     max-width: 95%;
-    background-image: url(/images/doeball.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 95%;
 
-    h1 {
+
+
+    #awards_section {
+        display: grid;
+        place-items: center;
+        background-image: url(/images/doeball.jpg);
+        background-repeat: no-repeat;
+        background-position: center;
+        width: 85%;
+        height: 100%;
+           
+        
+        h1 {
+        position: relative;
         text-shadow: 3px 3px black;
         font-size: 28px;
         font-weight: 800;
         max-width: 95%;
         margin: 10px;
+        z-index: 2;
 
-    }
-
-
-    h6 {
+            }
+           
+           
+        img {
+        position: absolute;
+        width: 50%;
+        height: 100%;
+        right: 0;
+        top: 0;
+        z-index: 0;
+         }
+         
+         
+        h6 {
+        position: relative;
+        align-self: end;
+        z-index: 2;
         color: white;
-        margin-top: 50px;
+         }
+
+
+
+
     }
-    #desktop_only_awards {
-        display: none;
+
+    iframe {
+        max-width: 95%;
+        margin-bottom: 40px;
     }
 }
 #about_us {
@@ -295,8 +317,6 @@
     }
 
     #awards {
-        background-image: url(/images/secondawards.jpg);
-
         h1 {
             max-width: 90%;
             margin-left: 5%;
@@ -331,6 +351,12 @@
         #desktop_only_awards {
             
             display: block;
+        }
+
+        #awards_section {
+            h1 {
+                max-width: 80%;
+            }
         }
 
     }
